--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <html lang="en">
-<head>
+<hea>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="main.css">
+    <title>Netko</title>
+    
+<head>
+    <h1>
+        "Xin chào mọi người"
+        <ul>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>      
+         </ul>
+    </h1>
+
 </head>
 <body>
     
