--- a/index.html
+++ b/index.html
@@ -14,9 +14,30 @@
             <li>3</li>      
          </ul>
     </h1>
-
+    <style>
+        .box{
+            width: 60px;
+            height: 60px;
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .box1 {
+            background-color: yellow;
+        }
+        .box2 {
+            background-color: red;
+        }
+        .box3 {
+            background-color: green;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <div class="box box1">Box1</div>
+    <div class="box box2">box2</div>
+    <div class="box box3">box3</div>
 </body>
 </html>
