--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="en">
-<hea>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
@@ -18,13 +18,17 @@
         .box{
             width: 60px;
             height: 60px;
-            color: white;
+            color: black;
             display: flex;
             align-items: center;
             justify-content: center;
         }
         .box1 {
-            background-color: yellow;
+            width: 100px;
+            height: 100px;
+            color: black;
+            background-color: blue;
+            padding: 16px;
         }
         .box2 {
             background-color: red;
@@ -36,8 +40,12 @@
 </head>
 
 <body>
-    <div class="box box1">Box1</div>
+    <div class="box">
+        Nội dung
+    </div>
     <div class="box box2">box2</div>
     <div class="box box3">box3</div>
+    <h1>Javascript basic</h1>
+    <script src="main.js"></script>
 </body>
 </html>
